k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: electromart
  labels:
    name: electromart
    app: electromart
